--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-sass": "^3.10.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vue-loader": "^9.2.2",
     "webpack": "2.1.0-beta.22",
     "webpack-dev-server": "^2.1.0-beta.0"
