--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
   "presets": [
-    ["es2015", { "modules": false }]
+    ["es2015", "stage-3"]
+  ],
+  "plugins": [
+    "transform-async-to-generator"
   ]
 }
