--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "author": "Sanster <cwq1913@163.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "index": "cp ./client/index.html ./public",
+    "dev": "npm run index && cross-env NODE_ENV=development webpack-dev-server --inline --hot",
+    "build": "npm run index && cross-env NODE_ENV=production webpack --progress --hide-modules",
     "start": "npm run build && node --harmony app.js"
   },
   "dependencies": {
