--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-register": "^6.16.3",
     "koa": "^2.0.0-alpha.7",
+    "koa-conditional-get": "^2.0.0",
+    "koa-etag": "^3.0.0",
     "koa-mount": "^2.0.0",
     "koa-router": "^7.0.1",
     "koa-send": "^3.2.0",
