--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-register": "^6.16.3",
+    "jquery": "^3.1.1",
     "koa": "^2.0.0-alpha.7",
     "koa-conditional-get": "^2.0.0",
     "koa-etag": "^3.0.0",
