add basic REST API

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "babel-register": "^6.16.3",
     "jquery": "^3.1.1",
     "koa": "^2.0.0-alpha.7",
+    "koa-bodyparser": "^3.2.0",
     "koa-conditional-get": "^2.0.0",
     "koa-etag": "^3.0.0",
+    "koa-logger": "^2.0.0",
     "koa-mount": "^2.0.0",
     "koa-router": "^7.0.1",
     "koa-send": "^3.2.0",
